--- a/theme.less
+++ b/theme.less
@@ -12,9 +12,16 @@
 .CodeMirror-focused .CodeMirror-activeline-background {
     background: #fff;
 }
+//scrollbar
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+}
 //Cursor
 .CodeMirror-cursor {
-    border-left: 1px solid #c5c8c6 !important;
+    border-left: 1px solid #aaaaaa !important;
 }
 // Strings
 .cm-atom,
